# airsim_img_publisher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/airsim_img_publisher/: AirSimClientStereoWrapper.h  AirSimClientWrapper.h  ImageProcessing.h  QuatRotEuler.h  TfCallback.h
launch/: mavrosAirsim.launch  octomap.launch  pubColoredPointCloud.launch  pubImages.launch  pubPointCloud.launch  pubStereoImages.launch  recordBag.launch
launch/include/: rviz_display.launch
launch/utils/: create_urdf.launch  publish_tf.launch
rviz/: octomapConfig.rviz
scripts/: AirSimClient.py  ais_fly.py
src/: debug.txt  imgPublisher.cpp  stereoPublisher.cpp
src/airsim_img_publisher/: AirSimClientStereoWrapper.cpp  AirSimClientWrapper.cpp  ImageProcessing.cpp  QuatRotEuler.cpp  TfCallback.cpp
urdf/frame/: dji_m100_frame.xacro
urdf/robot/: dji_m100_airsim.urdf  dji_m100_airsim.urdf.xacro
urdf/sensors/: airsim_cam.xacro
